# Homework_Module_12_PythonWEB

./: README.md
hw_12/: Umova.txt  main.py  pyproject.toml
hw_12/migrations/: env.py
hw_12/migrations/versions/: 3608ef0183de_init.py  8e601484eb5b_init.py  edeac7c6b055_add_user.py
hw_12/src/database/: models.py
hw_12/src/repository/: contacts.py  users.py
hw_12/src/routes/: auth.py  contacts.py
hw_12/src/schemas/: contact.py  user.py
hw_12/src/services/: auth.py
